--- a/GUSTAVO DOMINGUES DA SILVA/index.html
+++ b/GUSTAVO DOMINGUES DA SILVA/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>aloooooooooooooooooooooooooooooo</h1>
+    <h1>Comandos Git</h1>
+    <h3>inicialização das atividades</h3>
+    <h3>clonando</h3>
+    <ul>
+        <li>git clone
+            <p>clona a pasta do github para a sua maquina.</p>
+        </li>
+        <hr>
+        <li>git fetch --all
+            <p>sincroniza os repositorios repomotos.</p>
+        </li>
+        <hr>
+        <li>git pull
+            <p>faz o download das atualizações no servidor remoto.</p>
+        </li>
+    </ul>
+    
+    <h3>finalização das atividades</h3>
+    <ul>
+        <li>git status
+            <p>mostra oque tem de diferente do servidor remoto.</p>
+        </li>
+        <hr>
+        <li>git add .
+            <p>adiciona as modificações do servidor do servidor local.</p>
+        </li>
+        <hr>
+        <li>git commit -m "texto"
+            <p>adiciona uma commit no github com o texto que você quizer.</p>
+        </li>
+        <hr>
+        <li>git push
+            <p>faz o upload dos novos arquivos para o servidor remoto.</p>
+        </li>
+    </ul>
 </body>
 </html>
