--- a/Gabriel Cavalcante/index.html
+++ b/Gabriel Cavalcante/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" 
+    integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" 
+    crossorigin="anonymous">
+   
+    <title>Entrar</title>
 </head>
-<body>
-    
+<body style="background-image: url(./textura.svg); background-repeat:no-repeat;">
+    <form class="pure-form pure-form-stacked" >
+        <fieldset>
+            <!-- <legend>A compact inline form</legend> -->
+        <input type="email" placeholder="Email ou Nome de Usuário" />
+        <input type="password" placeholder="Senha" />
+        <label for="default-remember">
+            <input type="checkbox" id="default-remember" /> Lembre de Mim
+        </label>
+        <button type="submit" class="pure-button pure-button-primary">Entre</button>
+        </fieldset>
+    </form>
 </body>
 </html>
