--- a/saladeaula/flexbox/flexbox1.html
+++ b/saladeaula/flexbox/flexbox1.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Sobre Mim</title>
 </head>
 <body>
     <header> iniciando o flexbox </header>
     <div class="container" id="container">
-        <div>item um</div>
+        <div><img src="../flexbox/" alt=""></div>
         <div>Item dois</div>
         <div>Este sera o item Três</div>
       </div>
